# ezenciel-coding

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup-creds.sh
.github/workflows/: deploy.yml
projects/dummy-repo/: config.yaml  system.md
scripts/: register_and_submit_job.sh  sync_creds.sh  sync_projects.sh
specs/: codex-noninteractive-worker-init-fix.md  codex-thinking-only-logs.md  deterministic-pre-job-setup.md  mongodb-project-registration.md  pr-body-qa-evidence-gate.md  project-level-devjob-callback-config.md  project-target-branch-single-source.md  registration-system-instructions-qa-contract.md  remove-devjob-callback-support.md  workspace-sync-cleanup.md
src/: config.py
src/api/: main.py
src/database/: mongo.py  repository.py  session.py
src/models/: job.py
src/worker/: engine.py
tests/: test_api.py  test_engine.py  test_repository.py
